# monopoly

./: .gitignore  Player.py  cells.py  main.py  pyproject.toml  test.py
assets/: board.json
backend/app/: config.py  main.py
backend/app/api/: matchmaking.py  routes_auth.py  routes_debug.py  routes_dev.py  routes_game.py  routes_profile.py  security.py
backend/app/assets/: board.py  board_config.json
backend/app/db/: init_db.py
backend/app/game/: schemas.py
backend/app/models/: Board.py  Player.py  RedisGameStore.py  User.py  cards.py  game.py  gamesManager.py  gamesManager1.py  matchmaking.py
backend/app/schemas/: auth_schema.py  game_schemas.py
backend/app/services/: auth_service.py  game_handler.py  matchmaker.py
frontend/: package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Auction.tsx  BoardSpace.tsx  BuildHouseModal.tsx  BuildHousePanel.tsx  DevPanel.tsx  DiceRoller.tsx  GameBoard.tsx  GameOverModel.tsx  JailDecisionModel.tsx  Login.tsx  Logout.tsx  PlayerPanel.tsx  SideBar.tsx  Signup.tsx  threed_scene.tsx
frontend/src/components/ui/: card.tsx
frontend/src/data/: boardSpaces.ts
frontend/src/hooks/: use-gameSocket.tsx  use-queueSocket.tsx
frontend/src/pages/: NewGame.tsx  index.tsx
frontend/src/types/: monopoly.ts
